--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
-  "name": "hubusca",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "axios": "^1.6.1",
-    "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-native": "0.72.6"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.14",
-    "typescript": "^5.1.3"
-  },
-  "private": true
+   "name": "hubusca",
+   "version": "1.0.0",
+   "main": "node_modules/expo/AppEntry.js",
+   "scripts": {
+      "start": "expo start",
+      "android": "expo start --android",
+      "ios": "expo start --ios",
+      "web": "expo start --web"
+   },
+   "dependencies": {
+      "@react-navigation/native-stack": "^6.9.17",
+      "axios": "^1.6.1",
+      "expo": "~49.0.15",
+      "expo-app-loading": "^2.1.1",
+      "expo-status-bar": "~1.6.0",
+      "react": "18.2.0",
+      "react-native": "0.72.6",
+      "react-native-vector-icons": "^10.0.2",
+      "styled-components": "^6.1.1"
+   },
+   "devDependencies": {
+      "@babel/core": "^7.20.0",
+      "@types/react": "~18.2.14",
+      "@types/react-native-vector-icons": "^6.4.17",
+      "typescript": "^5.1.3"
+   },
+   "private": true
 }
