--- a/eas.json
+++ b/eas.json
@@ -3,16 +3,26 @@
       "version": ">= 5.8.0"
    },
    "build": {
-      "development": {
-         "developmentClient": true,
-         "distribution": "internal"
-      },
       "preview": {
          "android": {
             "buildType": "apk"
          }
       },
-      "production": {}
+      "preview2": {
+         "android": {
+            "gradleCommand": ":app:assembleRelease"
+         }
+      },
+      "preview3": {
+         "developmentClient": true
+      },
+      "production": {
+         "channel": "production"
+      },
+      "preview": {
+         "channel": "staging",
+         "distribution": "internal"
+      }
    },
    "submit": {
       "production": {}
