--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/config-plugins": "^7.2.2",
+    "@expo/prebuild-config": "^6.2.4",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.1",
     "date-fns": "^2.30.0",
-    "expo": "~49.0.15",
+    "expo": "^49.0.18",
     "expo-app-loading": "^2.1.1",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.17",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.2",
+    "react-navigation": "^5.0.0",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
